<package>
  <name>tf2_car</name>
  <version>0.6.7</version>
  <description>
    tf2_car
  </description>
  <author>Yushi Ogiwara</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
 
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>

</package>

