<package>
  <name>tf2_car</name>
  <version>0.6.7</version>
  <description> tf2_car </description>
  <author>Yushi Ogiwara</author>
  <maintainer email="yushiogiwara@keio.jp">Yushi Ogiwara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>

</package>

